feat: optimize search, add caching & manual refresh, and refine UI

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
             "AppName": "zi-lex"
         },
         "Integration": {
-            "UseFirebase": false
+            "UseFirebase": true
         },
         "Features": {
             "EnableImport": true,
